# quant-trading-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_PHASE3.md  AUDIT_REPORT_PHASE4_RISK_FIRST.md  DEVELOPMENT_LOG.md  PHASE_COMPLETION_REPORT.md  README.md  REMEDIATION_REPORT_PHASE3.md  REVIEW_REPORT_PHASE3.md  RISK_POLICY.md  ROADMAP_AND_CONSTRAINTS.md  issue-full-pipeline-v4.md  main.py  pyproject.toml
.agent/: README.md  artifact_manifest_codex_acceptance.json  artifact_manifest_codex_reviewer.json  changed_files.txt  current_task.yaml  state.json
config/: stock_pool.yaml
docs/: USER_GUIDE.md
feedback/: README.md  index.json
scripts/: agent_pipeline.py  agent_pipeline_acceptance_entry.py  agent_pipeline_regression.py  agent_pipeline_report_viewer.py  agent_runtime_profile.py  bootstrap.py  fetch_daily_data.py  ops_summary.py  quality_index_summary.py  restart.bat  restart.sh  run-pipeline-team-agent.sh  run-team-stage.ps1  run_backtest.py  run_claude_stage.sh  setup.bat  setup.sh  smoke_live_quotes.py  start.bat  start.sh  start_product.py  stop.bat  stop.sh  stop_product.py  summarize_feedback_bugs.py  validate_pr_reports.py  validate_theme_pool.py
src/: __init__.py
tests/: test_agent_pipeline_acceptance_entry.py  test_agent_pipeline_automation.py  test_agent_pipeline_regression.py  test_agent_pipeline_report_viewer.py  test_agent_runtime_resolver.py  test_agentops_control_tower.py  test_agentops_control_tower_page.py  test_agentops_foundation_routes.py  test_agentops_pipeline_aggregator.py  (+82 more)
(+720 files in other folders)
